@startuml

skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 80

title Lab Asset Management System - Class Diagram


'--- Core System Classes ---


class System {
    - CurrentUser : User
    - Incidents : vector<String>
    - usageLog : List<String>
    - userActive : boolean = false
    + run() : void
    + start_page() : void
    + create_account() : void
    + select_user() : void
    + user_log_in() : boolean
    - valid_user_login(email: String, pass: String) : boolean
    - update_usage_log(log: String) : void
    + hasOverlap(asset: Asset, start: ZonedDateTime, end: ZonedDateTime) : boolean
    + check_in(reservationID: int, user: User) : boolean
    + check_out(reservationID: int, user: User) : boolean
}

class NotificationService {
    - notificationID : String
    - recipientID : String
    - message : String
    - urgency : boolean
    - readFlag : boolean
    - timeStamp : ZonedDateTime
    - metaData : Map<String, String>
    + add_notification(msg: String) : void
    + get_unread_notifications(userID: String) : vector<String>
    + mark_notifications_read(notifID: String) : void
    + clear_notifications(userID: String) : void
}

' --- Resource Classes ---

abstract class Assets {
    - assetID : int
    - assetName : String
    - location : String
    - assetAccessLevel : int
    # documents : vector<Document>
    # reservationHistory : vector<Reservation>
    + displayDetails() : void
    + {abstract} isAvailable() : boolean
    + getDocuments() : vector<Document>
    + addDocument(docID: int, title: String) : boolean
    + removeDocument(docID: int) : boolean
    + getReservationHistory() : vector<Reservation>
}

class Equipment {
    - outOfService : boolean
    - condition : String
    + isAvailable() : boolean
    + setOutOfService(status: boolean, reason: String) : void
    + markAvailable() : void
    + checkOut() : void
    + checkIn() : void
}

class Consumable {
    - stock : int
    - minimumThreshold : int
    + isAvailable() : boolean
    + reduceStock(qty: int) : void
    + increaseStock(qty: int) : void
    + isBelowThreshold() : boolean
}

class SoftwareLicense {
    - seatCount : int
    - renewalDate : String
    - concurrentlyUsedSeats : int
    + isAvailable() : boolean
    + reserveSeat() : boolean
    + releaseSeat() : boolean
    + getUsageSummary() : String
    + renewalAlert(days: int) : boolean
}

class Documents {
    - documentID : int
    - authorID : int
    - timestamp : ZonedDateTime
    - description : String
    - title : String
    - type : String
    - accessControl : String
    + display_page() : void
    + uploadDocument(path: String) : boolean
    + createDocument(title: String, type: String) : boolean
    + editDocument(docID: int, desc: String) : boolean
    + deleteDocument(docID: int) : boolean
}

class Reservations {
    - reservationID : int
    - assetID : int
    - user : String
    - startDate : ZonedDateTime
    - endDate : ZonedDateTime
    - status : ReservationStatus
    - description : String
    - overdueFlag : boolean
    + permissionApproved : boolean
    + confirmed : boolean
    + update_asset_stock_count(assetID: String, qty: int) : void
    + makeReservation(args...) : boolean
    + cancelReservation() : boolean
}

' --- User Classes ---

class StudentResearcher {
    - id : int
    - name : String
    - email : String
    - permissions : List<String>
    - reservations : vector<Reservation>
    + display_page() : void
    - user_actions() : void
    - requestAsset(assetID: int, qty: int) : void
    - viewReservations() : void
    - cancelReservation(assetID: int) : void
    - return_asset() : void
    - submit_usage_feedback(equipID: int, comment: String) : void
}

class FacultyResearcher {
    - facultyID : int
    - name : String
    - email : String
    - permissions : List<String>
    - labGroupID : int
    - reservations : vector<Reservation>
    + display_page() : void
    - user_actions() : void
    + reserveAsset(assetID: int) : boolean
    + generateUsageReport(assetUsed: Asset) : Document
    + viewGroup(groupID: int) : Document
}

class LabManager {
    - managerID : int
    - name : String
    - email : String
    - department : String
    - permissions : List<String>
    + display_page() : void
    - user_actions() : void
    + viewDashboard() : List
    + grantRights(amID: int) : void
    + revokeRights(amID: int) : void
    + approveReservation(resID: int) : boolean
    + monitorAssets() : List
    + generateReport() : Dict
    + analyzeBudgetUsage() : Dict
}

class LabAssetManager {
    - assetManagerID : String
    - assetManagerName : String
    - assetManagerEmail : String
    - permissions : List<String>
    - accountList : vector<String>
    - assetInventory : vector<Asset>
    - documentRepository : vector<Document>
    + display_page() : void
    + user_actions() : void
    + createAccount(name: String, role: String) : String
    + updateAccount(id: String, info: String) : boolean
    + addAsset(name: String, loc: String) : Asset
    + flagAsset(id: String, reason: String) : boolean
    + inventoryCheck() : Document
    + uploadDocument(assetID: String, doc: Document) : Document
}

' --- Relationships ---

' Inheritance
Assets <|-- Equipment
Assets <|-- Consumable
Assets <|-- SoftwareLicense

' Interface Implementation
User <|.. StudentResearcher
User <|.. FacultyResearcher
User <|.. LabManager
User <|.. LabAssetManager

' System Relationships
System "1" *-- "many" Reservations : Composition >
System "1" o-- "many" Assets : Aggregation >
System "1" o-- "many" Documents : Aggregation >
System o-- User : "manages session for" >
System ..> NotificationService : <<uses>>

' User Relationships
StudentResearcher ..> Reservations : <<manages>>
FacultyResearcher ..> Reservations : <<manages>>

LabAssetManager ..> Assets : <<manages inventory>>
LabAssetManager ..> Documents : <<CRUD operations>>
LabAssetManager ..> Reservations : <<monitors>>
LabAssetManager ..> User : <<manages accounts>>
LabAssetManager ..> NotificationService : <<receives alerts>>

LabManager ..> System : <<privileged access>>
LabManager ..> NotificationService : <<receives alerts>>

' Asset & Resource Relationships
Assets "1" o-- "many" Documents : Aggregation >
Reservations "many" --> "1" Assets : References >
NotificationService ..> Reservations : <<monitors>>
NotificationService ..> Assets : <<monitors stock>>

@enduml
